# backend/internal/router/router.go
@@ -34,6 +34,7 @@ func SetupRouter(
 			secure.POST("/create", occHandler.CreateOccurrence)
 			secure.POST("/create/:occurrence_id/attachments", occHandler.AttachFiles)
 			secure.GET("/search", occHandler.SearchPage)
+			secure.GET("/occurrences/:occurrence_id", h.GetOccurrenceDetail)
 		}
 
 	}
